saving prescription and comments in DB

--- a/src/app/components/medicine-delivery/medicine-delivery.component.html
+++ b/src/app/components/medicine-delivery/medicine-delivery.component.html
@@ -70,7 +70,7 @@
                 <br>
                 <mat-form-field class="myTextArea">
                     <mat-label>Additional Comments</mat-label>
-                    <textarea matInput></textarea>
+                    <textarea formControlName="comments" matInput></textarea>
                 </mat-form-field>
                 <br><br>
                 <div class="row">
