--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,3 +1,13 @@
-.footer{
+/* .footer{
     background-color:#09335e;
+} */
+
+.footer{
+    
+    bottom:0; 
+    background:#001F3F;
+     color:white;
+      font-size:17px;
+       font-weight:500;
 }
+
