--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,4 @@
-
-<div class="footer" id="backmain">
+<!-- <div class="footer" id="backmain">
     <br>
     <div class="container" style="color: white;">
         <div class="row">
@@ -31,4 +30,121 @@
           </div>
         </div>
       </div>
-   </div>
+   </div> -->
+
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<div class="footer">
+
+  <div style="display: flex;
+    flex-direction: row;" id="row">
+    <!-- <div class="container"> -->
+    <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+      <div class="row justify-content-center">
+        <a href="#">About Us</a>
+      </div>
+      <div class="row justify-content-center">
+        <a href="#">Contact Us</a>
+      </div>
+      <div class="row justify-content-center">
+        <a href="#">Privacy Policy</a>
+      </div>
+      <div class="row justify-content-center">
+        <a href="#">Terms and Conditions</a>
+      </div>
+      <br>
+      <div class="row justify-content-center">
+        <img src="./assets/google.png">
+        &nbsp;
+        <img src="./assets/apple.png">
+
+      </div>
+
+    </div>
+    <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+      <div class="row justify-content-center">
+        <h4>Our Associates</h4>
+      </div>
+      <div class="row justify-content-center">
+        <a href="#">Link A</a>
+      </div>
+      <div class="row justify-content-center">
+        <a href="#">Link B</a>
+      </div>
+      <div class="row justify-content-center">
+        <a href="#">Link C</a>
+      </div>
+
+    </div>
+    <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+      <div class="row justify-content-center">
+        <h4>Latest Blog</h4>
+      </div>
+      <div class="row justify-content-center">
+        <h5>Covid 19</h5>
+      </div>
+      <div class="row justify-content-center">
+        <p style="font-size:13px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et nulla arcu.
+          Nullam vitae mauris facilisis, pharetra arcu a, porttitor diam.</p>
+      </div>
+      <br>
+      <div class="row justify-content-center">
+        <a id="footer-button" class="waves-effect waves-light btn">View More</a>
+      </div>
+
+
+    </div>
+    <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+      <div class="row justify-content-center">
+        <h3>Get Connected</h3>
+      </div>
+      <div class="row justify-content-center">
+
+        <a id="social-row" href="#" class="fa fa-facebook"></a>
+        <a id="social-row" href="#" class="fa fa-twitter"></a>
+        <a id="social-row" href="#" class="fa fa-instagram"></a>
+        <a id="social-row" href="#" class="fa fa-youtube"></a>
+
+        <!-- </div> -->
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <style>
+    .fa {
+      font-size: 25px;
+
+
+    }
+
+    #social-row {
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
+    a {
+      color: white;
+      font-size: 18px;
+      font-weight: 500;
+      text-decoration: underline;
+    }
+
+    #footer-button {
+      margin-top: -15px;
+      background: black;
+      color: white;
+      font-weight: 400;
+      font-size: 15px;
+      border-radius: 15px 1px 15px 1px;
+    }
+
+    #row {
+
+      margin-bottom: 0px;
+
+    }
+  </style>
