--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -3,14 +3,21 @@
 <div class="container" style="width:50%;">
     <br>
     <form #QuestionForm="ngForm" (ngSubmit)="onSubmit(QuestionForm)" autocomplete="off">
+        
         <div class="form-group">
-            <h2 style="text-align: center;">Post Your Question Here</h2>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  name ="question1" #question1="ngModel" [(ngModel)]="question" (ngModelChange)="dataChanged(question1)" required></textarea>
-            <div class="alert alert-danger" *ngIf="question1.touched && !question1.valid">Question is required</div>
-        </div>
+          <h2 style="text-align: center;">Post Your Question Here</h2>
+          <textarea class="form-control" id="exampleFormControlTextarea2" rows="2"  name ="question2" #question2="ngModel" [(ngModel)]="question_model" placeholder="Title of Question" required></textarea>
+          <div class="alert alert-danger" *ngIf="question2.touched && !question2.valid">Question is required</div>
+      </div>
+    
+      <div class="form-group">
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  name ="question1" #question1="ngModel" [(ngModel)]="question"  placeholder="Put your detailed query here" required></textarea>
+              <div class="alert alert-danger" *ngIf="question1.touched && !question1.valid">Question is required</div>
+          </div>
+        
           <div class="form-group">
             <label for="exampleFormControlSelect1">Select Category</label>
-            <select class="form-control" id="exampleFormControlSelect1" name ="category1"  #category1="ngModel" [(ngModel)]="category" (ngModelChange)="dataChanged($event)" required="true">
+            <select class="form-control" id="exampleFormControlSelect1" name ="category1"  #category1="ngModel" [(ngModel)]="category" required="true">
               <option value="COVID">COVID</option>
               <option value="Dental">Dental</option>
               <option value="Ortho">Ortho</option>
@@ -32,9 +39,9 @@
        <table>
             <tr *ngFor="let data of forumData" style=" border-bottom: 1px solid grey;">
                 <br>
-                <span (click)="onSelect(data)" style="color: blue; cursor: -webkit-grab; cursor: grab;"><h2>{{data.question}} ?</h2></span>
+                <span routerLink="/question/{{data.questionId}}/{{data.category}}" style="color: blue; cursor: -webkit-grab; cursor: grab;"><h2>{{data.question}} ?</h2></span>
                 <p><span style="color: grey;">Asked By:</span> {{data.askedby}}</p>
-                <p><span style="color: green;">{{data.answer_count}}</span> answer &nbsp;&nbsp; <span style="color: green;">{{data.votes}}</span> votes &nbsp;&nbsp; Category: <span style="color: blue;">{{data.category}}</span></p>
+                <p><!--<span style="color: green;">{{data.answer_count}}</span> answer &nbsp;&nbsp; --><span style="color: green;">{{data.votes}}</span> votes &nbsp;&nbsp; Category: <span style="color: blue;">{{data.category}}</span></p>
             </tr>
         </table>
       </div>
@@ -47,7 +54,7 @@
               Filter By Category:
               <div class="form-group">
                 <select class="form-control"   name="category" [(ngModel)]="category" (ngModelChange)="dataChanged($event)" required="true">
-                    <option  *ngFor="let data of forumFilter" value="{{data.category}}">{{data.category}}</option>
+                    <option  *ngFor="let data of forumFilter" value="{{data}}">{{data}}</option>
                   </select>
                 </div>
             </div>
