implemented DELETE order

--- a/src/app/components/medicine-delivery/my-orders/my-orders.component.html
+++ b/src/app/components/medicine-delivery/my-orders/my-orders.component.html
@@ -1,1 +1,32 @@
-<p>my-orders works!</p>
+<div class="container">
+    <div class="style1">
+        <mat-card class="example-card" *ngFor="let data of orderData">
+            <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <mat-card-title>Order Date: {{ data.date | date }} </mat-card-title>
+                <mat-card-subtitle> Order placed at: {{ data.date | date: 'shortTime' }} </mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <p>
+                    Pharmacy Name: {{ data.pharmacyName }}
+                </p>
+                <p>
+                    Apartment Number: {{ data.apartmentNo }}
+                </p>
+                <p>
+                    Street Address: {{ data.streetAddress }}
+                </p>
+                <p>
+                    Postal Code: {{ data.postalCode }}
+                </p>
+                <p>
+                    Mobile Number: {{ data.mobileNumber }}
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-raised-button style="color: #FF0000" (click)="deleteOrder(data._id)"
+                >DELETE ORDER</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+</div>
