Changes - Fixed Overflow in Homepage - Change hover css in header - Added Reset Password Component - Add environment variable for Password regex

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div>
+  <div style="overflow-x: hidden;">
     <app-header></app-header>
 
     <router-outlet></router-outlet>
