--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,18 +1,37 @@
 <div class="parent">
     <section class="container">
-        <div class="login">
-            <h3>Login</h3>
+        <div class="email">
+            <h3>Reset Password</h3>
+            <br>
             <mat-card-actions>
                 <button (click)="selectConsumer()" [class.mat-raised-button]="consumer" mat-stroked-button>For
                     Consumers</button>
                 <button m={0} (click)="selectDoctor()" [class.mat-raised-button]="!consumer" mat-stroked-button>For
                     Doctors</button>
             </mat-card-actions>
-            <form [formGroup]="loginForm">
+            <form [formGroup]="emailForm">
                 <mat-form-field class="first" appearance="standard">
                     <mat-label>Enter your email</mat-label>
                     <input formControlName="email" matInput placeholder="pat@example.com" required>
-                    <mat-error *ngIf="email.invalid">{{getEmailError()}}</mat-error>
+                    <mat-error *ngIf="email.invalid">
+                        {{ getEmailError() }}
+                    </mat-error>
+                </mat-form-field>
+                <br>
+                <mat-card-actions>
+                    <button (click)="sendAuthenticationCode()" mat-stroked-button type="submit" color="#001F3F">SEND
+                        EMAIL</button>
+                    <br>
+                </mat-card-actions>
+            </form>
+
+            <form [formGroup]="passwordForm">
+                <mat-form-field class="first" appearance="standard">
+                    <mat-label>Enter verification token</mat-label>
+                    <input formControlName="token" for matInput required>
+                    <mat-error *ngIf="token.invalid">
+                        {{ getTokenError() }}
+                    </mat-error>
                 </mat-form-field>
                 <br>
                 <mat-form-field appearance="standard">
@@ -25,17 +44,18 @@
                     <mat-error *ngIf="password.invalid">{{getPasswordError()}}</mat-error>
                 </mat-form-field>
                 <br>
-                <br>
                 <mat-card-actions>
-                    <button (click)="login()" mat-raised-button type="submit" color="primary">LOGIN</button>
+                    <button [disabled]="disable" (click)="resetPassword()" mat-raised-button type="submit"
+                        color="#001F3F">RESET
+                        PASSWORD</button>
                     <br>
                     <br>
-                    <button (click)="openResetPasswordPage()" class="link" mat-button>Forgot Password?</button>
-                    <br>
-                    <button (click)="openRegisterPage()" class="link" mat-button>New User? Register
-                        Here</button>
                 </mat-card-actions>
             </form>
+            <button (click)="openLoginPage()" class="link" mat-button>Have an Account? Login Here</button>
+            <br>
+            <button (click)="openRegisterPage()" class="link" mat-button>New User? Register
+                Here</button>
 
         </div>
     </section>
