View and Delete orders

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -97,6 +97,8 @@
                     <div fxLayout="column">
                         <button mat-button [routerLink]="['/edit-profile']"><span class="menu-item">Edit
                                 Profile</span></button>
+                        <button mat-button [routerLink]="['/my-orders']"><span class="menu-item">My
+                                Orders</span></button>
                         <button (click)="logout()" mat-button><span class="menu-item">Logout</span></button>
                     </div>
                 </mat-menu>
