--- a/src/app/components/medicine-delivery/medicine-delivery.component.html
+++ b/src/app/components/medicine-delivery/medicine-delivery.component.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="row parentCss " style="justify-content: center;">
                     <div>
-                        <label for="uploadPrescription" class="text-style">Upload Prescription File*</label>
+                        <label for="uploadPrescription" class="text-style">Upload Prescription Image*</label>
                         <input id="uploadPrescription" formControlName="prescriptionFile" type="file"
                             (change)="onFileChange($event)" required #fileInput/>
                         </div>
