--- a/src/app/components/doctor-profile/doctor-profile.component.html
+++ b/src/app/components/doctor-profile/doctor-profile.component.html
@@ -1,4 +1,4 @@
-<body fxLayout="column">
+<body style="margin-bottom:50px;" fxLayout="column">
     <section style="margin-top: 10px;" fxLayout.gt-md="row" fxLayout.lt-md="column" fxLayoutAlign="center center"
         fxLayoutGap="5%">
         <img class="profile-picture"
@@ -37,46 +37,7 @@
     <br>
     <mat-divider></mat-divider>
     <br>
-    <section fxLayout="column" fxLayoutAlign="flex-start flex-start" class="review-container">
-        <h2>Reviews & Ratings</h2>
-        <article fxLayoutAlign="center center" fxLayout="row" fxLayout.lt-sm="column">
-            <form>
-                <article fxLayout="row">
-                    <h3>Rating:</h3>
-                    <mat-icon>star</mat-icon>
-                    <mat-icon>star</mat-icon>
-                    <mat-icon>star</mat-icon>
-                    <mat-icon>star</mat-icon>
-                    <mat-icon>star_border</mat-icon>
-                </article>
-                <mat-form-field>
-                    <mat-label>Enter your review here</mat-label>
-                    <textarea [formControl]="review" required matInput></textarea>
-                    <mat-error *ngIf="review.invalid">{{getReviewErrorMessage()}}</mat-error>
-                </mat-form-field>
-                <button type="submit" mat-raised-button class="confirm">Submit</button>
-            </form>
 
-        </article>
-        <article fxLayout="row" fxLayout="column">
-            <div fxLayout="row" fxLayoutAlign="center center">
-                <h3>Other Reviews </h3>
-                <mat-divider fxShow.gt-sm></mat-divider>
-            </div>
-            <div class="scroll-container" id="style-1" fxLayout="row" fxLayoutGap="0.5%">
-                <mat-card class="example-card" *ngFor="let card of obs | async">
-                    <mat-card-header fxLayout="row" fxLayoutGap="5%" class="card-header">
-                        <mat-card-title>{{card.user}}</mat-card-title>
-                        <mat-card-subtitle>{{card.rating}}</mat-card-subtitle>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <p>{{card.review}}</p>
-                    </mat-card-content>
-                </mat-card>
-                <br>
-            </div>
-            <br>
-            <mat-divider></mat-divider>
-        </article>
-    </section>
+
+<app-feedback></app-feedback>
 </body>
