Integrated HomeCare with backend

--- a/src/app/components/home-care/home-care.component.html
+++ b/src/app/components/home-care/home-care.component.html
@@ -1,3 +1,5 @@
+<!-- author: Harshit Trivedi -->
+
 <div class="container">
     <div class="homeCare">
         <h1>Home Care Service</h1>
@@ -17,12 +19,11 @@
             </div>
             <div>
                 <br><br>
-                <img src="https://lh3.googleusercontent.com/proxy/W30w9xG4E3yBt-uAKGIRJk_JgUCWbP8bNJwsc8xRulXabYxhP9Uf05-Jb2s0DfFSJNEQgqRq9Qf0-XhD5MxNF5RDNN9g0LuDf_EvK-HxdrqRIrwGAalD-zXtKA" 
-                alt="">
+                <img src="./assets/homeCare.gif">
             </div>
         </div>
         <br>
-        <h1 class="homeCare">We Care for You</h1>
+        <h1>We Care for You</h1>
         <hr>
         <p>
             Qualified, professional, trustworthy, kind, and dependable. We treat all of our
@@ -47,8 +48,8 @@
             rotation, and they really become part of the family.
         </p>
         <div>
-            <button mat-stroked-button
-            (click)="onScheduleCare()" style="color: #001F3F;">Schedule Home Care</button>
+            <button mat-raised-button
+            (click)="onScheduleCare()" color="primary">Schedule Home Care</button>
         </div>
     </div>
 <hr>
