--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -39,13 +39,15 @@
       <div class="col-8" style="background-color: #f6f7f8;">
         <h2>Trending Questions</h2>
        <table>
-            <tr *ngFor="let data of forumData" style=" border-bottom: 1px solid grey;">
+            <tr *ngFor="let data of forumData | paginate: {itemsPerPage: 4, currentPage:page}" style=" border-bottom: 1px solid grey;">
                 <br>
                 <span routerLink="/question/{{data.questionId}}/{{data.category}}" style="color: blue; cursor: -webkit-grab; cursor: grab;"><h2>{{data.question}} ?</h2></span>
                 <p><span style="color: grey;">Asked By:</span> {{data.askedby}}</p> 
                 <p><span style="color: red;" *ngIf="data.answerval==0 else elblock">No Answers</span> <ng-template #elblock>Answers posted</ng-template> &nbsp;&nbsp; <span style="color: green;">{{data.votes}}</span> votes &nbsp;&nbsp; Category: <span style="color: blue;">{{data.category}}</span></p>
             </tr>
         </table>
+        <br>
+        <pagination-controls (pageChange)="page = $event"></pagination-controls>
       </div>
       <div class="col-sm">
         <h2>Filters</h2>
