Added commits and refined code

--- a/src/app/components/medicine-delivery/medicine-delivery.component.html
+++ b/src/app/components/medicine-delivery/medicine-delivery.component.html
@@ -1,7 +1,10 @@
+<!-- author: Harshit Trivedi -->
+<!-- From here, the user can order medicines by filling the order details and uploading a valid prescription image-->
+
 <div class="orderMedicine-container">
 
     <div class="text-center">
-        <img src="https://d.newsweek.com/en/full/1541364/prescription-pills.jpg" width="100%" height="350px">
+        <img src="./assets/orderMedicine.jpg" width="100%" height="350px">
         <br>
         <div class="custom-tab">
             <h2>Enter your order details and prescription here</h2>
