--- a/src/app/components/medicine-delivery/my-orders/my-orders.component.html
+++ b/src/app/components/medicine-delivery/my-orders/my-orders.component.html
@@ -1,3 +1,6 @@
+<!-- author: Harshit Trivedi -->
+<!-- From here, the user can view their pending orders and can also delete them -->
+
 <div class="container">
     <div class="style1">
         <mat-card class="example-card" *ngFor="let data of orderData">
@@ -31,7 +34,7 @@
     </div>
     <div class= "style2" *ngIf="orderLength==0">
         <div>
-            <img src="https://www.vinsolutions.com/vinsolutions/media/Vin-Images/news-blog/Empty_Shopping_Cart_blog.jpg?ext=.jpg">
+            <img src="../../../../assets/emptyCart.jpg">
         </div>
         <br>
         <div>
