Made changes in Doctor-Profile page.

--- a/src/app/components/doctor-profile/doctor-profile.component.html
+++ b/src/app/components/doctor-profile/doctor-profile.component.html
@@ -9,10 +9,10 @@
             alt="Profile Picture">
         <article class="details-container">
             <h2>{{doctorName}}</h2>
-            <h3>General Physician</h3>
-            <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta repellendus quaerat eos dolores deserunt
-                laborum non id? Assumenda quo voluptate dignissimos ullam ipsum non tenetur, rem molestiae cum illo
-                aliquam!</h4>
+            <h3>{{doctorSpecialization}}</h3>
+            <h4>{{doctorDescription}}</h4>
+            <h4 style="font-weight: bold; margin-top: 5px;">Location: <h4>{{doctorLocation}}</h4></h4>
+            <h4 style="font-weight: bold; margin-top: 5px;">Fee: <h4>{{doctorFee}}</h4></h4>
             <h2>Appointments</h2>
             <div class="appointment-container" fxLayout="column">
                 <mat-form-field>
