Few changes in search front-end

--- a/src/app/components/doctor-profile/doctor-profile.component.html
+++ b/src/app/components/doctor-profile/doctor-profile.component.html
@@ -5,7 +5,7 @@
     <section style="margin-top: 10px;" fxLayout.gt-md="row" fxLayout.lt-md="column" fxLayoutAlign="center center"
         fxLayoutGap="5%">
         <img class="profile-picture"
-            src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+            src={{doctorImageSrc}}
             alt="Profile Picture">
         <article class="details-container">
             <h2>{{doctorName}}</h2>
