--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -36,7 +36,7 @@
                     <mat-card-title>{{data.name}}</mat-card-title>
                     <mat-card-subtitle>{{data.specialization}}</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image src="../../../assets/doctor-search.jpg">
+                <img mat-card-image src={{data.image_url}}>
             </mat-card>
             <br>
         </div>
@@ -55,7 +55,7 @@
                     <mat-card-title>{{data.name}}</mat-card-title>
                     <mat-card-subtitle>{{data.specialization}}</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image src="../../../assets/doctor-search.jpg">
+                <img mat-card-image src={{data.image_url}}>
             </mat-card>
             <br>
         </div>
@@ -74,7 +74,7 @@
                     <mat-card-title>{{data.name}}</mat-card-title>
                     <mat-card-subtitle>{{data.specialization}}</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image src="../../../assets/doctor-search.jpg">
+                <img mat-card-image src={{data.image_url}}>
             </mat-card>
             <br>
         </div>
