--- a/src/app/components/search-result/search-result.component.html
+++ b/src/app/components/search-result/search-result.component.html
@@ -10,7 +10,7 @@
         <div style="text-align: left;">
             <div class="row">
                 <div class="column"  style="float: left;">
-                    <div class="image"><img src="../../../assets/doctor-search.jpg" alt="Image" class="img-thumbnail"></div>
+                    <div class="image" style="height: 200px;"><img src={{doctor.image_url}} alt="Image" class="img-thumbnail"></div>
                 </div>
                 <div class="column" style="margin-left: 15px;">
                     <h4 style="font-weight: bold;">Name: <h4>{{doctor.name}}</h4></h4>
